# aiorequests

./: .gitignore  README.md  pyproject.toml  setup.py
aiorequests/: __init__.py  aiorequests.py
