[build-system]
requires = [
    "setuptools>=61.0",
    "aiohttp==3.8.3",
    "requests==2.28.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "aiorequests"
version = "0.0.1"
authors = [
  { name="André Gerbaulet", email="andre@onefin.io" },
]
description = "A lightweight package for initiating parallel requests"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OneFinSE/aiorequests"
"Bug Tracker" = "https://github.com/OneFinSE/aiorequests/issues"